--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no" />
-		<link href="E:\terms-master\Learners.css" rel="stylesheet" />	
+		<link href="Learners.css" rel="stylesheet" />	
 </head>
 
 <body>	
